--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -3,6 +3,7 @@
   text-align: center;
   color: $light;
   
+  
 
   img {
     height: 250px;
@@ -15,7 +16,7 @@
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    background-size: obtain;
+    background-size: cover;
     background-position: center center;
     
     
