--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -34,3 +34,12 @@ section {
 .container__products {
   margin-top: 2rem;
 }
+
+.subscribe {
+
+  max-width: 400px;
+  padding-top: 2rem;
+  justify-content: center;
+
+  
+}
