--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -5,6 +5,7 @@ $box-shadow: 0 2px 16px 0 rgba(0, 0, 0, .08);
 $background-colorBody: linear-gradient(45deg, rgba(249,252,247,1) 0%,rgba(245,249,240,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 $footer-Nav-background-color: linear-gradient(to right, rgba(225,255,255,1) 0%,rgba(225,255,255,1) 0%,rgba(253,255,255,1) 0%,rgba(190,228,248,1) 100%,rgba(230,248,253,1) 100%,rgba(177,216,245,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 $nav-link-background: #86e2f0;
+$button-color: #3dadd9;
 $dark-grey: #333333;
 $light-grey: #afafaf;
 $apricot: #f6b8a1;
