--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,12 @@ section {
   background-color: #f8f9fa;
 }
 
+.card-img {
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .card--featured {
   position: relative;
 }
@@ -375,7 +381,7 @@ footer {
   text-align: center;
   padding: 5px 0;
   margin-top: 0;
-  font: 1em;
+  font: .3em;
   font-family: 'Playfair Display', serif;
 }
 
