--- a/sass/partials/_cards.scss
+++ b/sass/partials/_cards.scss
@@ -13,6 +13,12 @@
         background-color: $light;
     }
 
+    &-img {
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+    }
+
     &--featured {
         position: relative;
         
@@ -32,6 +38,7 @@
         background-color: $green;
         border: none;
     }
+    
 }
 
 @media (max-width: 767.98px) {
