--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -4,7 +4,7 @@ footer {
 	text-align: center;
 	padding: 5px 0;
 	margin-top: 0;
-	font: 1em;
+	font: .3em;
 	font-family: 'Playfair Display', serif; ;
 }
 .footer-wrapper {
