--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -62,3 +62,19 @@ footer a {
 	justify-content: center;
 	padding-top: 1em;
 }
+
+
+.paymentOptions, .text-muted{
+	justify-content: center;
+	background: -moz-linear-gradient(45deg, rgba(254,255,255,1) 0%, rgba(210,235,249,1) 100%); /* FF3.6-15 */
+	text-align: center;
+	padding: 5px 0;
+	margin-top: 0;
+
+}
+
+.options_bg {
+	background: -moz-linear-gradient(45deg, rgba(254,255,255,1) 0%, rgba(210,235,249,1) 100%); /* FF3.6-15 */
+	margin: solid 5px rgba(254,255,255,1) 0%;
+	
+}
