--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -4,9 +4,26 @@ footer {
 	text-align: center;
 	padding: 5px 0;
 	margin-top: 0;
-	font: .3em;
+	font-size: .7em;
 	font-family: 'Playfair Display', serif; ;
+	
+	h4{
+		font-size: 1.8em;
+		font-weight: bold;
+	}
+	
+
 }
+@media (min-width: 575px) {
+	footer{
+		font-size: 1em;
+
+		h4{
+		font-size: 1.8em;	
+		}
+	}
+}
+
 .footer-wrapper {
 	display: flex;
 	align-items: center;
